--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,13 @@ jobs:
           key: ${{ secrets.DEPLOYMENT_PRIVATE_KEY }}
           port: ${{ secrets.DEPLOYMENT_PORT }}
           passphrase: ${{ secrets.DEPLOYMENT_PASSPHRASE }}
-            
-      - name: Pull latest changes from GitHub
-        run: git pull
-
-      - name: Deploy Docker Compose
-        run: |
-          MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
-          MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
-          docker-compose -f /path/to/your/docker-compose.yml up -d
+          script: whoami 
+            #      - name: Pull latest changes from GitHub
+            #        run: git pull
+            #
+            #      - name: Deploy Docker Compose
+            #        run: |
+            #          MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
+            #          MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
+            #          docker-compose -f /path/to/your/docker-compose.yml up -d
 
