test: change command

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,35 +11,8 @@ jobs:
     runs-on: self-hosted 
 
     steps:
-<<<<<<< HEAD
-      - name: SSH into your deployment server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.DEPLOYMENT_HOST }}
-          username: ${{ secrets.DEPLOYMENT_USERNAME }}
-          key: ${{ secrets.DEPLOYMENT_PRIVATE_KEY }}
-          port: ${{ secrets.DEPLOYMENT_PORT }}
-          passphrase: ${{ secrets.DEPLOYMENT_PASSPHRASE }}
-          script: | 
-             hostname \
-             ls -al .ssh/
-            #      - name: Pull latest changes from GitHub
-            #        run: git pull
-            #
-=======
-      #- name: SSH into your deployment server
-      #  uses: appleboy/ssh-action@master
-      #  with:
-      #    host: ${{ secrets.DEPLOYMENT_HOST }}
-      #    username: ${{ secrets.DEPLOYMENT_USERNAME }}
-      #    key: ${{ secrets.DEPLOYMENT_PRIVATE_KEY }}
-      #    port: ${{ secrets.DEPLOYMENT_PORT }}
-      #    passphrase: ${{ secrets.DEPLOYMENT_PASSPHRASE }}
-      #    script: whoami 
       - name: Pull latest changes from GitHub
-        run: git pull
-      
->>>>>>> 567d593 (test: change command)
+        run: hostname 
             #      - name: Deploy Docker Compose
             #        run: |
             #          MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
