--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - name: Pull latest changes from GitHub
-        run: hostname 
-            #      - name: Deploy Docker Compose
-            #        run: |
-            #          MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
-            #          MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
-            #          docker-compose -f /path/to/your/docker-compose.yml up -d
+        run: pwd 
+      - name: Deploy Docker Compose
+        run: |
+          MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
+          MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
+          docker-compose -f /path/to/your/docker-compose.yml up -d
 
