test: file path

--- a/.github/workflows/deploy-manually.yml
+++ b/.github/workflows/deploy-manually.yml
@@ -15,4 +15,4 @@ jobs:
           MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
           docker stop heinrich-von-zimmel-db-1 \
           docker rm heinrich-von-zimmel-db-1 \
-          docker-compose -f /home/morgott/product/Heinrich-Von-Zimmel/docker-compose.yml up -d
+          docker compose -f /home/morgott/product/Heinrich-Von-Zimmel/docker-compose.yml up -d
