fix: uncomment ci

--- a/Kerselec/Dockerfile
+++ b/Kerselec/Dockerfile
@@ -1,3 +1,16 @@
+FROM alpine:3.19.0 AS builder
+
+#premier container
+RUN apk update && \
+    apk add --no-cache \
+    neovim \
+    git \
+    python3 \
+    python3-dev \
+    py3-pip \
+    build-base
+
+#second container
 FROM alpine:3.19.0
 
 RUN apk update && \
@@ -5,23 +18,27 @@ RUN apk update && \
     openssl \
     ncurses \
     wget \
-    git \
-    neovim \
     curl \
     python3 \
-    python3-dev \
-    py3-pip \
+    neovim \
     tmux \
     zsh \
+    git \
     build-base
 
-RUN adduser -D yukinoli -s /usr/bin/zsh
+RUN adduser -D yukinoli -s /usr/bin/bash 
+
 USER yukinoli
 
 RUN wget https://raw.githubusercontent.com/yukinoli/MesDocker/main/.tmux.conf -O /home/yukinoli/.tmux.conf
-RUN git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
-RUN mkdir ~/mnt
 
-RUN git clone https://github.com/NvChad/starter ~/.config/nvim && \
-    nvim --headless +qa
+RUN wget https://raw.githubusercontent.com/yukinoli/MesDocker/main/.tmux.conf -O /home/yukinoli/.tmux.conf && \
+    git clone https://github.com/tmux-plugins/tpm /home/yukinoli/.tmux/plugins/tpm && \
+    mkdir /home/yukinoli/mnt
 
+RUN cd $HOME &&\
+    git clone https://github.com/NvChad/starter ~/.config/nvim &&\
+    nvim --headless +qa &&\ 
+    cd
+
+WORKDIR /home/yukinoli
