--- a/Kerselec/Dockerfile
+++ b/Kerselec/Dockerfile
@@ -26,19 +26,19 @@ RUN apk update && \
     git \
     build-base
 
-RUN adduser -D yukinoli -s /usr/bin/bash 
+RUN adduser -D Kêr-is -s /usr/bin/bash 
 
-USER yukinoli
+USER Kêr-is
 
-RUN wget https://raw.githubusercontent.com/yukinoli/MesDocker/main/.tmux.conf -O /home/yukinoli/.tmux.conf
+RUN wget https://raw.githubusercontent.com/Kêr-is/MesDocker/main/.tmux.conf -O /home/Kêr-is/.tmux.conf
 
-RUN wget https://raw.githubusercontent.com/yukinoli/MesDocker/main/.tmux.conf -O /home/yukinoli/.tmux.conf && \
-    git clone https://github.com/tmux-plugins/tpm /home/yukinoli/.tmux/plugins/tpm && \
-    mkdir /home/yukinoli/mnt
+RUN wget https://raw.githubusercontent.com/Kêr-is/MesDocker/main/.tmux.conf -O /home/Kêr-is/.tmux.conf && \
+    git clone https://github.com/tmux-plugins/tpm /home/Kêr-is/.tmux/plugins/tpm && \
+    mkdir /home/Kêr-is/mnt
 
 RUN cd $HOME &&\
     git clone https://github.com/NvChad/starter ~/.config/nvim &&\
     nvim --headless +qa &&\ 
     cd
 
-WORKDIR /home/yukinoli
+WORKDIR /home/Kêr-is
