fix: Kêr-is to Keris

--- a/Kerselec/Dockerfile
+++ b/Kerselec/Dockerfile
@@ -7,8 +7,7 @@ RUN apk update && \
     git \
     python3 \
     python3-dev \
-    py3-pip \
-    build-base
+    py3-pip 
 
 #second container
 FROM alpine:3.19.0
@@ -26,19 +25,19 @@ RUN apk update && \
     git \
     build-base
 
-RUN adduser -D Kêr-is -s /usr/bin/bash 
+RUN adduser -D Keris -s /usr/bin/bash 
 
-USER Kêr-is
+USER Keris
 
-RUN wget https://raw.githubusercontent.com/Kêr-is/MesDocker/main/.tmux.conf -O /home/Kêr-is/.tmux.conf
+RUN wget https://raw.githubusercontent.com/Keris/MesDocker/main/.tmux.conf -O /home/Keris/.tmux.conf
 
-RUN wget https://raw.githubusercontent.com/Kêr-is/MesDocker/main/.tmux.conf -O /home/Kêr-is/.tmux.conf && \
-    git clone https://github.com/tmux-plugins/tpm /home/Kêr-is/.tmux/plugins/tpm && \
-    mkdir /home/Kêr-is/mnt
+RUN wget https://raw.githubusercontent.com/Keris/MesDocker/main/.tmux.conf -O /home/Keris/.tmux.conf && \
+    git clone https://github.com/tmux-plugins/tpm /home/Keris/.tmux/plugins/tpm && \
+    mkdir /home/Keris/mnt
 
 RUN cd $HOME &&\
     git clone https://github.com/NvChad/starter ~/.config/nvim &&\
     nvim --headless +qa &&\ 
     cd
 
-WORKDIR /home/Kêr-is
+WORKDIR /home/Keris
