--- a/Ansible/playbooks/install_docker.yml
+++ b/Ansible/playbooks/install_docker.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: localhost
-  gather_facts: false
+  gather_facts: true
   become: true
   tasks:
     - name: Install Docker & Docker Compose Plugin
