--- a/Ansible/roles/ansible_docker/defaults/main.yml
+++ b/Ansible/roles/ansible_docker/defaults/main.yml
@@ -1,9 +1,9 @@
 ---
 # Edition can be one of: 'ce' (Community Edition) or 'ee' (Enterprise Edition).
 docker_packages:
-  - docker-ce-3:26.1.3-1.el8
-  - docker-ce-cli-1:26.1.3-1.el8
-  - docker-ce-rootless-extras-26.1.3-1.el8
+  - docker-ce
+  - docker-ce-cli
+  - docker-ce-rootless-extras
   - containerd.io
 
 docker_install_compose: true
