--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
       WORDPRESS_DB_USER: admin
       WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
       WORDPRESS_DB_NAME: wordpress
+    networks:
+      - wordmot
   mysql:
     image: mysql:5.7
     container_name: mysql-db
@@ -31,3 +33,5 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
 volumes:
   db_data:
+networks:
+  mot:
