fix: path workflow

--- a/.github/workflows/deploy-manually.yml
+++ b/.github/workflows/deploy-manually.yml
@@ -23,4 +23,4 @@ jobs:
         run: |
           MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
           MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
-          docker-compose -f ../../docker-compose.yml up -d
+          docker-compose -f ./docker-compose.yml up -d
