--- a/.github/workflows/deploy-manually.yml
+++ b/.github/workflows/deploy-manually.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Dp a zarma
+      - name: ???suprise??? 
         run: |
           MYSQL_ROOT_PASSWORD=${{ secrets.MYSQL_ROOT_PASSWORD }} \
           MYSQL_PASSWORD=${{ secrets.MYSQL_PASSWORD }} \
